--- a/WowCarLauncher/mobile/src/main/res/values/strings.xml
+++ b/WowCarLauncher/mobile/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">车载启动器</string>
+    <string name="app_name">车机优化</string>
     <string name="bg_main_btn_add">添加</string>
     <string name="bg_main_btn_all">全部</string>
     <string name="music_title">音乐</string>
