--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -32,5 +32,5 @@
     <string name="driving_cool_black_tp_nodata">0.0</string>
     <string name="trip_merge_time_message">OBD两次读取转速不为0的时间间隔 %1$d 分钟,默认为同一行程</string>
 
-    <string name="launcher_tp">%1$.1f\n%2$d℃</string>
+    <string name="launcher_tp">%1$s\n%2$.1f\n%3$d℃</string>
 </resources>
