--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
 
+    <string name="obd_not_connect">OBD没有连接</string>
+    <string name="obd_not_tp">OBD设备不支持胎压</string>
 
     <string name="driving_cool_black_tp">%1$.1f/%2$d℃</string>
     <string name="driving_cool_black_tp_nodata">0.0</string>
