--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">车机助手</string>
+    <string name="app_name">嘟嘟桌面</string>
     <string name="bg_main_btn_add">添加</string>
     <string name="bg_main_btn_all">全部</string>
     <string name="music_title">音乐</string>
