--- a/chunhei/src/main/res/values/strings.xml
+++ b/chunhei/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="theme_item_amap_xunhang_line">show</string>
     <string name="theme_item_weather_layout">layout2</string>
     <string name="theme_use_wallpaper">no</string>
+    <string name="theme_launcher_layout">layout1</string>
 </resources>
