黑色主题独立

--- a/heise/src/main/res/values/strings.xml
+++ b/heise/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="theme_name">纯黑主题</string>
-    <string name="theme_item_title_align">left</string>
-    <string name="theme_item_music_cover_type">circ</string>
-    <string name="theme_item_amap_daohang_line">show</string>
-    <string name="theme_item_amap_xunhang_line">show</string>
-    <string name="theme_item_weather_layout">layout2</string>
+    <string name="theme_name">黑色主题</string>
+    <string name="theme_item_title_align">center</string>
+    <string name="theme_item_music_cover_type">rect</string>
+    <string name="theme_item_amap_daohang_line">hide</string>
+    <string name="theme_item_amap_xunhang_line">hide</string>
+    <string name="theme_item_weather_layout">layout1</string>
     <string name="theme_use_wallpaper">no</string>
     <string name="theme_launcher_layout">layout1</string>
 </resources>
