--- a/chunhei/src/main/res/values/strings.xml
+++ b/chunhei/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!--主题名称,必须添加-->
-    <string name="theme_name">纯黑主题2</string>
+    <string name="theme_name">纯黑主题</string>
     <!--插件标题位置,left,center,right-->
     <string name="theme_item_title_align">left</string>
     <!--音乐封面,圆形circ,矩形rect-->
