--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="theme_item_weather_layout">layout1</string>
     <string name="theme_use_wallpaper">no</string>
     <string name="theme_launcher_layout">layout1</string>
+
+    <string name="theme_amap_btn_layout">layout1</string>
 </resources>
